Support of `object` query parameters like 'a.b'.
