# petStore-api/src/main/swagger/petStore.yaml
@@ -51,7 +51,14 @@ paths:
               - young
               - mature
           collectionFormat: csv
-        - name: limit
+        - name: pager.drop
+          in: query
+          description: number of results to skip from the beginning
+          required: false
+          type: integer
+          format: int32
+          default: -1
+        - name: pager.limit
           in: query
           description: maximum number of results to return
           required: false
